2012-03-15  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* music.py: New file.
	(configure): New function.
